# autonomous-navigation-ring-detection

./: CMakeLists.txt  package.xml
launch/: ring.launch
msg/: ColorRecognition.msg  xy.msg
src/: circle_detection.cpp  colour_recognition.py  cylinder_segmentation.cpp  extract_qr  goal_processor.cpp  histogram_classifier.py  knn_client.py  laser_node.cpp  navigation.cpp  neighbors.py  processing_node.cpp  processing_node_rings.cpp  qr_client.py  record_data.cpp  ring_collector.cpp  ring_detection.cpp  ring_detection2.cpp  ring_locations.cpp
srv/: ColorRecognition0.srv  goal.srv  knn.srv  qr.srv
